--- a/src/main/webapp/resources/css/shop/main/popup.css
+++ b/src/main/webapp/resources/css/shop/main/popup.css
@@ -8,12 +8,10 @@
 	padding: 1rem;
 	text-align: center;
 	width: 100%;
-	height: 600px;
-	
+	height: 500px;
 }
 
-h2{
-	/* animation: colorChange 1s infinite linear alternate; */
+.titleDiv h2{
 	font-size: 1.5rem;
 }
 
@@ -33,7 +31,6 @@ h2{
 
 /*제목*/
 .titleDiv{
-	/* border: 3px solid yellow; */
 	height: 10%;
 	display: flex;
     align-items: center;
@@ -41,27 +38,36 @@ h2{
 }
 /*이미지 구역*/
 .imgDiv{
+	position: relative;
 	height: 70%;
 	overflow: hidden;
-	border: 1px solid black;
 }
+
+.popupTextDiv{
+	position: absolute;
+	width: 100%;
+	height: 30%;
+	background-color: rgba(0, 0, 0, 0.51);
+	bottom: 0;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+}
+
 /*팝업 이미지*/
 #popupImg{
-	
 	transition: .3s;
 	cursor: pointer;
 	width: 100%;
 	height: 100%;
 }
 
-#popupImg:hover{
-	transform: scale(1.2,1.2);
-}
+
 
 .btnDiv{
 	height: 20%;
-	/* border: 3px solid black; */
 	display: flex;
     align-items: center;
     justify-content: space-around;
 }
+
