--- a/src/main/webapp/resources/css/shop/product/product_detail_admin.css
+++ b/src/main/webapp/resources/css/shop/product/product_detail_admin.css
@@ -285,7 +285,13 @@ main {
     align-items: center;
     justify-content: space-between;
 }
-
+.reviewProfileImg{
+    width: 50px;
+    height: 50px;
+    object-fit: fill;
+    margin-right: 0.5rem;
+    border-radius: 40%;
+}
 /*리뷰작성자*/
 .reviewWriterSpan {
     font-size: 1.4rem;
@@ -373,8 +379,8 @@ main {
 /*네비게이터 */
 .navigatorContainer {
     font-family: 'Black Han Sans';
-    width: 150px;
-    height: 400px;
+    width: 50px;
+    height: 250px;
     background-color: var(--fontColor);
     position: fixed;
     right: 20px;
@@ -388,7 +394,7 @@ main {
 
 .toTopDiv {
     width: 100%;
-    height: 20%;
+    height: 25%;
     border: 1px solid white;
     cursor: pointer;
     display: flex;
@@ -399,7 +405,7 @@ main {
 
 .toReviewCon {
     width: 100%;
-    height: 20%;
+    height: 25%;
     border: 1px solid white;
     cursor: pointer;
     display: flex;
@@ -410,7 +416,7 @@ main {
 
 .toBottomDiv {
     width: 100%;
-    height: 20%;
+    height: 25%;
     border: 1px solid white;
     cursor: pointer;
     display: flex;
@@ -421,12 +427,16 @@ main {
 
 .youtubeDiv {
     width: 100%;
-    height: 40%;
+    height: 25%;
     border: 1px solid white;
     cursor: pointer;
     display: flex;
     justify-content: center;
     align-items: center;
+    transition: .3s;
+}
+
+.playIconSpan{
     transition: .3s;
 }
 
@@ -459,8 +469,8 @@ main {
 }
 
 .youtubeInnerDiv {
-    width: 1280px;
-    height: 720px;
+    width: fit-content;
+    height: fit-content;
     position: relative;
     top: 50%;
     left: 50%;
@@ -568,10 +578,6 @@ main {
         width: 100%;
     }
 
-    .navigatorContainer {
-        display: none;
-    }
-
     .reviewGraphDiv p, .reviewBottom p {
         font-size: 0.5rem;
     }
@@ -587,7 +593,10 @@ main {
     .reviews, .reviewsDiv {
         padding: 0.2rem;
     }
+    .adIframe{
+        width: 100%;
 
+    }
 
 
 }
@@ -640,7 +649,10 @@ main {
     .reviews, .reviewsDiv {
         padding: 0.5rem;
     }
-
+    .adIframe{
+        width: 100%;
+        height: 500px;
+    }
 
 }
 
@@ -666,6 +678,10 @@ main {
         color: var(--hoverColor);
     }
 
+    .navigatorContainer div:hover .playIconSpan{
+        color: var(--hoverColor);
+    }
+
     .thumb:hover {
         cursor: not-allowed;
     }
@@ -673,7 +689,10 @@ main {
         color: var(--fontColor);
         transform: scale(1.2,1.2);
     }
-
+    .adIframe{
+        width: 1280px;
+        height: 720px;
+    }
 
 }
 
