--- a/src/main/webapp/resources/css/shop/product/product_detail_user.css
+++ b/src/main/webapp/resources/css/shop/product/product_detail_user.css
@@ -315,6 +315,13 @@ main {
     align-items: center;
     justify-content: space-between;
 }
+.reviewProfileImg{
+    width: 50px;
+    height: 50px;
+    object-fit: fill;
+    margin-right: 0.5rem;
+    border-radius: 40%;
+}
 
 /*리뷰작성자*/
 .reviewWriterSpan {
@@ -403,8 +410,8 @@ main {
 /*네비게이터 */
 .navigatorContainer {
     font-family: 'Black Han Sans';
-    width: 150px;
-    height: 400px;
+    width: 50px;
+    height: 250px;
     background-color: var(--fontColor);
     position: fixed;
     right: 20px;
@@ -418,7 +425,7 @@ main {
 
 .toTopDiv {
     width: 100%;
-    height: 20%;
+    height: 25%;
     border: 1px solid white;
     cursor: pointer;
     display: flex;
@@ -429,7 +436,7 @@ main {
 
 .toReviewCon {
     width: 100%;
-    height: 20%;
+    height: 25%;
     border: 1px solid white;
     cursor: pointer;
     display: flex;
@@ -440,7 +447,7 @@ main {
 
 .toBottomDiv {
     width: 100%;
-    height: 20%;
+    height: 25%;
     border: 1px solid white;
     cursor: pointer;
     display: flex;
@@ -451,12 +458,16 @@ main {
 
 .youtubeDiv {
     width: 100%;
-    height: 40%;
+    height: 25%;
     border: 1px solid white;
     cursor: pointer;
     display: flex;
     justify-content: center;
     align-items: center;
+    transition: .3s;
+}
+
+.playIconSpan{
     transition: .3s;
 }
 
@@ -489,8 +500,8 @@ main {
 }
 
 .youtubeInnerDiv {
-    width: 1280px;
-    height: 720px;
+    width: fit-content;
+    height: fit-content;
     position: relative;
     top: 50%;
     left: 50%;
@@ -597,10 +608,6 @@ main {
         width: 100%;
     }
 
-    .navigatorContainer {
-        display: none;
-    }
-
     .reviewGraphDiv p, .reviewBottom p {
         font-size: 0.5rem;
     }
@@ -617,7 +624,17 @@ main {
         padding: 0.2rem;
     }
 
+    .navigatorContainer{
+        right: 2px;
+    }
+    .youtubeInnerDiv{
+        width: 100%;
+        height: 100%;
+    }
+    .adIframe{
+        width: 100%;
 
+    }
 
 }
 
@@ -670,6 +687,15 @@ main {
         padding: 0.5rem;
     }
 
+    .youtubeInnerDiv{
+        width: 100%;
+        height: 100%;
+    }
+    .adIframe{
+        width: 100%;
+        height: 500px;
+    }
+
 
 }
 
@@ -695,6 +721,10 @@ main {
         color: var(--hoverColor);
     }
 
+    .navigatorContainer div:hover .playIconSpan{
+        color: var(--hoverColor);
+    }
+
     .thumb:hover {
         color: rgb(0, 128, 255);
     }
@@ -702,7 +732,10 @@ main {
         color: var(--fontColor);
         transform: scale(1.2,1.2);
     }
-
+    .adIframe{
+        width: 1280px;
+        height: 720px;
+    }
 
 }
 
