--- a/src/main/webapp/resources/css/admin/detail.css
+++ b/src/main/webapp/resources/css/admin/detail.css
@@ -105,7 +105,16 @@ p{
 	overflow-y: auto;
 	padding: 0 0.5rem;
 }
-.camping{
+.freeBoard::-webkit-scrollbar{
+	width: 10px;
+}
+.freeBoard::-webkit-scrollbar-track{
+	background-color: rgb(94, 94, 94);
+}
+.freeBoard::-webkit-scrollbar-thumb{
+	background-color: rgba(31, 31, 31, 0.47);
+}
+.freeBoard{
 	background-color: var(--sub2Color);
 	margin: 1rem 0;
 	width: 100%;
@@ -113,6 +122,15 @@ p{
 	height: 33%;
 	overflow-y: auto;
 	padding: 0 0.5rem;
+}
+.camping::-webkit-scrollbar{
+	width: 10px;
+}
+.camping::-webkit-scrollbar-track{
+	background-color: rgb(94, 94, 94);
+}
+.camping::-webkit-scrollbar-thumb{
+	background-color: rgba(31, 31, 31, 0.47);
 }
 .qna{
 	background-color: var(--sub2Color);
@@ -123,6 +141,15 @@ p{
 	overflow-y: auto;
 	padding: 0 0.5rem;
 }
+.qna::-webkit-scrollbar{
+	width: 10px;
+}
+.qna::-webkit-scrollbar-track{
+	background-color: rgb(94, 94, 94);
+}
+.qna::-webkit-scrollbar-thumb{
+	background-color: rgba(31, 31, 31, 0.47);
+}
 .buy{
 	background-color: var(--sub2Color);
 	margin: 1rem 0;
@@ -131,6 +158,15 @@ p{
 	height: 33%;
 	overflow-y: auto;
 	padding: 0 0.5rem;
+}
+.buy::-webkit-scrollbar{
+	width: 10px;
+}
+.buy::-webkit-scrollbar-track{
+	background-color: rgb(94, 94, 94);
+}
+.buy::-webkit-scrollbar-thumb{
+	background-color: rgba(31, 31, 31, 0.47);
 }
 .lineDiv{
 	width: 100%;
