--- a/src/main/webapp/resources/css/shop/draw/draw_admin.css
+++ b/src/main/webapp/resources/css/shop/draw/draw_admin.css
@@ -1,272 +1,305 @@
-.draw_container{
-    width: 100%;
-    background-color: var(--subColor);
-      font-family: 'GimpoGothicBold00';
-	transition: .3s;	
-}
-
-.section{
-    width: 100%;
-}
-
-/*메인 이미지*/
-.section1{
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column; 
-    padding: 1rem;
-}
-
-.section1>h1{
-    font-size: 3.5rem;
-    margin-bottom: 20px;
-    color: var(--fontColor);
-}
-
-.section1>h1>span{
-    color: white;
-}
-
-.section1_img>img{
-    width: 1200px;
-    height: 850px;
-    border-radius:10px;
-    box-shadow : var(--sub2Color) 0px 0px 5px 3px;
-} 
-
 /*이벤트*/
-.section2{
+.drawContainer {
     width: 100%;
-    font-family: 'GimpoGothicBold00';
-	transition: .3s;
-	marging-top:20px;
-} 
+    max-width: 1600px;
+    margin: 5rem auto 0;
+    border-top: 1px solid whitesmoke;
+}
 
 /*이벤트 상단*/
-.section2-top{
-    height: 100px;
-    /* margin-top: 5px; */
-    width: 70%;
-    margin: 0 auto;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    font-size: 1.5rem;
-    padding: 2.5rem;
-    color:white;
-    border-bottom: 2px solid var(--subFontColor) ;
-    margin-top:10px;
-} 
-#drawRegistBtn{
-	  border-radius: 10px;
-    width: 150px;
-    height: 60px;
-    padding-left: 0.5rem;
-	background-color: rgb(24, 24, 24);
-	font-family: 'GimpoGothicBold00';
-	outline: none;
-	transition: .3s;
-    border: none;
-    margin-top: 20px;
-    font-size: 1.1rem;
-    color:white;
-    font-weight: bold;  
-    margin-bottom:30px;  
+.drawHeaderDiv {
+    width: 100%;
+    position: relative;
+
 }
-#drawRegistBtn>a{
-	text-decoration:none;
-	color:white;
-}
-.section2-top>span{
+
+.drawHeaderDiv span {
+    position: absolute;
+    top: -16px;
+    left: 50%;
+    transform: translateX(-50%);
+    background-color: var(--subColor);
+    padding: 0 10px;
     font-weight: bold;
 }
+.addDrawBtn{
+    position: absolute;
+    width: 100px;
+    height: 40px;
+    background-color: var(--mainColor);
+    color: white;
+    cursor: pointer;
+    top: 10px;
+    right: 0;
+    border-radius: 5px;
+}
+
+.drawCenterDiv {
+    width: 100%;
+}
+
 /*이벤트 내용, foreach 반복 디비전*/
-.section2-bottom{
-    width: 70%;
-    margin: 0 auto;
-    height: auto;
-    padding: 2rem;  
-  
+.drawBodyDiv {
+    width: 100%;
 }
-/*이벤트 각각 이미지*/
-.section2_img{
-    width: 80%;
+
+.oneDrawDiv {
+    margin: 5rem 0;
+    width: 100%;
     height: 500px;
-    display:flex;
-   justify-content: center;
-   align-items: center;
-   margin-left:200px; 
-   margin-bottom:30px;
-     margin-top:20px;
-}
-.productMainImg{
-	width:800px;
-	height:480px;
-	border-radius: 10px;
-	 box-shadow : var(--sub2Color) 0px 0px 5px 3px;
-}
-.section2-bottom .section2_font{
-  /* margin-right: 700px */
-  width:80%;
-  margin-left:200px;
-}
-.section2-bottom .section2_font .font_top{
-   border-bottom:1px solid var(--borderColor);  
-   width: 100%;
-   /* margin-top: 40px; */
-   /* height: 70px; */
-   font-size: 1.5rem;
-   padding: 1rem;
-   display: flex;
-   justify-content: space-between;
-}
-/*수정, 삭제버튼 컨테이너*/
-.adminBtnsContainer{
-    width: 20%;
-    /* background-color: blue; */
     display: flex;
-    justify-content: space-between;
-}
-.adminBtns{
-    width: 45%;
-    background-color: var(--mainColor);
-    color: white;
-    border: none;
-    font-weight: 600;
-    border-radius: 10px;
-    font-size: 1.5rem;
-    padding-left: 0.5rem;
-	font-family: 'GimpoGothicBold00';
-	outline: none;
-	transition: .3s;
-    font-weight: bold;    
-}
-.adminBtns>a{
-	text-decoration:none;
-	color:white;
+    flex-wrap: wrap;
 }
 
-.font_bottom{
+.oneDrawTop {
+    width: 100%;
+    height: 50px;
+    background-color: var(--sub2Color);
     display: flex;
-    flex-direction: column;
-    font-size: 1.5rem;
-    padding: 1rem;
-    color: white;
-    border-bottom: 2px solid var(--subFontColor) ;
-
-}
-table{
-    border-collapse: collapse;
-    
-}
-table td{
-    border: 1px solid white;
-    padding: 1rem;
-}
-table tr td:first{
-    width: 30%;
-}
-table tr td:last-child{
-    width: 70%;
-}
-.font_top{
-	color: var(--fontColor);
-}
-#font_top_name{
-	color:white;
-}
-.font_top_button{
-    border-radius: 10px;
-    width: 300px;
-    height: 70px;
-    background-color: var(--mainColor);
-    font-size: 2.0rem;
-    padding-left: 0.5rem;
-	font-family: 'GimpoGothicBold00';
-	outline: none;
-	transition: .3s;
-    border: none;
-    margin-top: 30px;
-    color:white;
-    font-weight: bold;  
-    margin-bottom:30px;
-    margin-left: 20px;
-}
-.font_top_button>a{
-	text-decoration:none;
-	color:white;
+    align-items: center;
+    padding-left: 1rem;
 }
 
-/* 모달 css */
-.modal_bottom{
+.drawCenterDiv {
+    width: 100%;
+    height: 400px;
+    display: flex;
+}
+
+/*이벤트 각각 이미지*/
+.drawImgDiv {
+    width: 50%;
+    height: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 100%;
-    height: 100px;
-    font-size: 2.0rem;
 }
-/*응모 닫기 버튼*/
-.modal_bottom_btn, .modal_final_bottom_btn{
+.productAnchor{
+    text-decoration: none;
+}
+
+.productMainImg {
+    width: 350px;
+    height: 350px;
+    border-radius: 10px;
+    box-shadow: var(--sub2Color) 0px 0px 5px 3px;
+}
+
+.drawBottomDiv {
+    width: 50%;
+    height: 100%;
+    padding: 1rem 0 0 2rem;
+    overflow-y: auto;
+}
+
+.drawBottomDiv::-webkit-scrollbar{
+    width: 10px;
+}
+.drawBottomDiv::-webkit-scrollbar-track{
+    background-color: rgb(94, 94, 94);
+}
+.drawBottomDiv::-webkit-scrollbar-thumb{
+    background-color: rgba(31, 31, 31, 0.47);
+}
+
+.drawBottomDiv li {
+    margin-bottom: 0.5rem;
+}
+
+.drawBottomDiv li span:nth-child(1) {
+    font-weight: bolder;
+    font-size: 1.1rem;
+    display: inline-block;
+    width: 150px;
+}
+.drawBottomDiv li span:nth-child(2) {
+    color: var(--subFontColor);
+}
+
+.drawBtnDiv {
+    width: 100%;
+    height: 50px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: var(--sub2Color);
+}
+
+.drawModifyBtn {
     width: 100px;
     height: 50px;
-    border: 4px;
-    background-color: var(--mainColor);
+    font-size: 1rem;
+    background-color: transparent;
     color: white;
+    font-family: "Black Han Sans";
+    cursor: pointer;
+    outline: none;
+    border: none;
+    border-radius: 10px;
 }
 
-.modal_final_container{
-    display: none;
+.showWinnerBtn {
+    width: 100px;
+    height: 50px;
+    font-size: 1rem;
+    text-decoration: underline;
+    background-color: transparent;
+    color: white;
+    font-family: "Black Han Sans";
+    cursor: pointer;
+    outline: none;
+    border: none;
+}
+
+/*당첨자 리스트 컨테이너*/
+.winnerListContainer{
     position: fixed;
     top: 0;
-    bottom: 0;
     left: 0;
-    right: 0;
     width: 100%;
-    height:100%;
-    background-color: rgba(0,0,0,0.4);
-    z-index: 1;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.18);
+    backdrop-filter: blur(4px);
+    display: none;
+    z-index: 999;
 }
-.modal_final_body{
-    background-color: white;
-    margin:8% auto;
-    /* margin-left: 500px; */
-    border-radius: 4px;
-    width: 1000px;
-    padding: 1rem;
+.winnerListDiv{
+    width: 80%;
+    height: 80%;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
-.modal_final_top{
+
+.winnerListTop{
+    width: 100%;
+    height: 50px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 0 1rem;
+    font-size: 1.2rem;
+    font-weight: bolder;
+    color: white;
+    background-color: rgba(0, 0, 0, 0.64);
+}
+.closeWinnerListContainerIcon{
+    cursor: pointer;
+}
+.winnerListCountInfoDiv{
     width: 100%;
     height: 100px;
-    border-bottom: 1px solid black;
-    font-size: 2.5rem;
-    color: black;
-    font-weight: bold;
+    background-color: rgba(255, 255, 255, 0.63);
     display: flex;
-    justify-content: center;
     align-items: center;
+    border-bottom: 2px solid #2e383c;
 }
-.modal_final_middle{
-    height: 300px;
-    width: 100%;
-    font-size: 1.8rem;
+.winnerListCountInfoDiv ul{
+    list-style: none;
+    margin-left: 0.5rem;
+    color: black;
+
+
 }
-.modal_final_middle span{
+.winnerListCountInfoDiv ul li span{
+    color: black;
+}
+.winnerListCountInfoDiv ul li span:first-child{
     display: inline-block;
-    margin: 1rem;
+    font-weight: bolder;
+    width: 150px;
 }
-.modal_final_bottom{
+.winnerListBottom{
+    width: 100%;
+    height: calc(100% - 150px);
+    color: white;
+    overflow-y: auto;
+    background-color: rgba(82, 82, 82, 0.58);
+}
+.winnerLineDiv{
     display: flex;
-    justify-content: center;
     align-items: center;
-    height: 100px;
-    width: 1000px;
-    font-size: 2.0rem;
+    width: 100%;
+    height: 30px;
+    font-size: 1rem;
 }
-.modal_final_middle>span:nth-child(n){
-    margin-left: 25px;
-    background-color: white;
-    color: black;
+.winnerLineDiv a{
+    display: inline-block;
+    width: 150px;
+    font-weight: bolder;
+}
+.winnerLineDiv span{
+    cursor: pointer;
+}
+.winnerLineDiv span, .winnerLineDiv a{
+    margin-left: 0.5rem;
+}
+.winnerListBottom::-webkit-scrollbar{
+    width: 10px;
+}
+.winnerListBottom::-webkit-scrollbar-track{
+    background-color: rgb(94, 94, 94);
+}
+.winnerListBottom::-webkit-scrollbar-thumb{
+    background-color: rgba(31, 31, 31, 0.47);
+}
+
+@media screen and (min-width: 1px) and (max-width: 767px) {
+    .oneDrawDiv {
+        height: 900px;
+    }
+
+    .drawCenterDiv {
+        height: 800px;
+        flex-direction: column;
+    }
+
+    .drawImgDiv, .drawBottomDiv {
+        width: 100%;
+        height: 400px;
+    }
+
+    .drawImgDiv img {
+        width: 250px;
+        height: 250px;
+    }
+
+    .drawBottomDiv {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+
+    .drawBottomDiv li span {
+        display: inline-block;
+        width: 100%;
+    }
+
+    .drawBottomDiv li span:nth-child(2) {
+        font-size: 0.7rem;
+    }
+}
+
+@media screen and (min-width: 767px) and (max-width: 1023px) {
+    .oneDrawDiv {
+        height: 900px;
+    }
+
+    .drawCenterDiv {
+        height: 800px;
+        flex-direction: column;
+    }
+
+    .drawImgDiv, .drawBottomDiv {
+        width: 100%;
+        height: 400px;
+    }
+
+    .drawBottomDiv {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+
 }
