--- a/src/main/webapp/resources/css/shop/draw/draw_customer.css
+++ b/src/main/webapp/resources/css/shop/draw/draw_customer.css
@@ -1,380 +1,267 @@
-.draw_container {
-    width: 100%;
-    transition: .3s;
-}
-
-.section {
-    width: 100%;
-}
-
-/*메인 이미지*/
-.section1 {
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    padding: 1rem;
-    border: 3px solid bisque;
-    transition: .3s;
-}
-
-.section1 > h1 {
-    font-size: 3.5rem;
-    margin-bottom: 20px;
-    color: var(--fontColor);
-}
-
-.section1 > h1 > span {
-    color: white;
-}
-.section1_img{
-    width: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-.section1_img > img {
-    width: 50%;
-    border-radius: 10px;
-    box-shadow: var(--sub2Color) 0px 0px 5px 3px;
-}
-
 /*이벤트*/
-.section2 {
+.drawContainer {
     width: 100%;
-    font-family: 'GimpoGothicBold00';
-    transition: .3s;
-    marging-top: 20px;
+    max-width: 1600px;
+    margin: 5rem auto 0;
+    border-top: 1px solid whitesmoke;
 }
 
 /*이벤트 상단*/
-.section2-top {
-    height: 100px;
-    /* margin-top: 5px; */
-    width: 70%;
-    margin: 0 auto;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    font-size: 1.5rem;
-    padding: 2.5rem;
-    color: white;
-    border-bottom: 2px solid var(--subFontColor);
-    margin-top: 10px;
+.drawHeaderDiv {
+    width: 100%;
+    position: relative;
+
 }
 
-.section2-top > span {
+.drawHeaderDiv span {
+    position: absolute;
+    top: -16px;
+    left: 50%;
+    transform: translateX(-50%);
+    background-color: var(--subColor);
+    padding: 0 10px;
     font-weight: bold;
 }
 
+.drawCenterDiv {
+    width: 100%;
+}
+
 /*이벤트 내용, foreach 반복 디비전*/
-.section2-bottom {
-    width: 70%;
-    margin: 0 auto;
-    height: auto;
-    padding: 2rem;
+.drawBodyDiv {
+    width: 100%;
+}
+
+.oneDrawDiv {
+    margin: 5rem 0;
+    width: 100%;
+    height: 500px;
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.oneDrawTop {
+    width: 100%;
+    height: 50px;
+    background-color: var(--sub2Color);
+    display: flex;
+    align-items: center;
+    padding-left: 1rem;
+}
+
+.drawCenterDiv {
+    width: 100%;
+    height: 400px;
+    display: flex;
 }
 
 /*이벤트 각각 이미지*/
-.section2_img {
-    width: 80%;
-    height: 500px;
+.drawImgDiv {
+    width: 50%;
+    height: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-left: 200px;
-    margin-bottom: 30px;
-    margin-top: 20px;
+}
+.productAnchor{
+    text-decoration: none;
 }
 
 .productMainImg {
-    width: 800px;
-    height: 480px;
+    width: 350px;
+    height: 350px;
     border-radius: 10px;
     box-shadow: var(--sub2Color) 0px 0px 5px 3px;
 }
 
-.section2_font .font_top {
-    border-bottom: 1px solid var(--borderColor);
+.drawBottomDiv {
+    width: 50%;
+    height: 100%;
+    padding: 1rem 0 0 2rem;
+    overflow-y: auto;
+}
+
+.drawBottomDiv::-webkit-scrollbar{
+    width: 10px;
+}
+.drawBottomDiv::-webkit-scrollbar-track{
+    background-color: rgb(94, 94, 94);
+}
+.drawBottomDiv::-webkit-scrollbar-thumb{
+    background-color: rgba(31, 31, 31, 0.47);
+}
+
+.drawBottomDiv li {
+    margin-bottom: 0.5rem;
+}
+
+.drawBottomDiv li span:nth-child(1) {
+    font-weight: bolder;
+    font-size: 1.1rem;
+    display: inline-block;
+    width: 150px;
+}
+.drawBottomDiv li span:nth-child(2) {
+    color: var(--subFontColor);
+}
+
+.drawBtnDiv {
     width: 100%;
-    /* margin-top: 40px; */
-    /* height: 70px; */
-    font-size: 1.5rem;
-    padding: 1rem;
-}
-
-.font_top > h1 {
-    color: var(--fontColor);
-}
-
-.font_top > h3 {
-    color: white;
-}
-
-.font_bottom {
+    height: 50px;
     display: flex;
-    flex-direction: column;
-    font-size: 1.5rem;
-    padding: 1rem;
+    align-items: center;
+    justify-content: center;
+    background-color: var(--sub2Color);
+}
+
+.drawApplicationBtn {
+    width: 100px;
+    height: 50px;
+    font-size: 1rem;
+    background-color: transparent;
     color: white;
-    border-bottom: 2px solid var(--subFontColor);
-
-}
-
-.font_bottom_td {
-    /* text-align : center; */
-    width: 20%;
-}
-
-table {
-    border-collapse: collapse;
-
-}
-
-table td {
-    border: 1px solid white;
-    padding: 1rem;
-
-}
-
-table tr td:first {
-    width: 30%;
-}
-
-table tr td:last-child {
-    width: 70%;
-}
-
-.font_bottom_td {
-    /* text-align : center; */
-    width: 20%;
-}
-
-.button_container {
-    display: flex;
-    flex-direction: row;
-
-
-}
-
-.font_top_button {
-    border-radius: 10px;
-    width: 300px;
-    height: 70px;
-    background-color: var(--mainColor);
-    font-size: 2.0rem;
-    padding-left: 0.5rem;
-    font-family: 'GimpoGothicBold00';
-    outline: none;
-    transition: .3s;
-    border: none;
-    margin-top: 30px;
-    color: white;
-    font-weight: bold;
-    margin-bottom: 30px;
-    margin-left: 50px;
+    font-family: "Black Han Sans";
     cursor: pointer;
-}
-
-.font_top_button:hover {
-    color: var(--fontColor);
-}
-
-.font_top_button_end {
-    border-radius: 10px;
-    width: 300px;
-    height: 70px;
-    padding-left: 0.5rem;
-    background-color: rgb(24, 24, 24);
-    font-family: 'GimpoGothicBold00';
     outline: none;
-    transition: .3s;
     border: none;
-    font-size: 2.0rem;
+    border-radius: 10px;
+}
+
+.showWinnerBtn {
+    width: 100px;
+    height: 50px;
+    font-size: 1rem;
+    text-decoration: underline;
+    background-color: transparent;
     color: white;
-    font-weight: bold;
-    margin-top: 30px;
-    margin-right: 50px;
+    font-family: "Black Han Sans";
     cursor: pointer;
+    outline: none;
+    border: none;
 }
 
-.font_top_button_end:hover {
-    color: var(--fontColor);
-}
-
-/* 모달 css */
-.modal_container {
-    display: none;
+/*당첨자 리스트 컨테이너*/
+.winnerListContainer{
     position: fixed;
     top: 0;
-    /* bottom: 0; */
     left: 0;
-    /* right: 0; */
     width: 100%;
     height: 100%;
-    background-color: rgba(0, 0, 0, 0.418);
+    background-color: rgba(0, 0, 0, 0.18);
     backdrop-filter: blur(4px);
-    z-index: 1;
+    display: none;
+    z-index: 999;
 }
-
-.modal_body {
-    background-color: white;
-    margin: 8% auto;
-    /* margin-left: 500px; */
-    border-radius: 4px;
-    width: 1000px;
+.winnerListDiv{
+    width: 80%;
+    height: 80%;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    background-color: rgba(82, 82, 82, 0.58);
+    transform: translate(-50%, -50%);
 }
-
-.modal_top {
-    display: flex;
-    justify-content: center;
-    align-items: center;
+.winnerListTop{
     width: 100%;
-    height: 400px;
-    /* background-color: white; */
-    color: black;
-    font-size: 2.5rem;
-}
-
-.modal_bottom {
+    height: 50px;
     display: flex;
-    justify-content: center;
     align-items: center;
-    width: 100%;
-    height: 100px;
-    font-size: 2.0rem;
-}
-
-/*응모 닫기 버튼*/
-.modal_final_bottom_btn {
-    border-radius: 10px;
-    width: 300px;
-    height: 70px;
-    padding-left: 0.5rem;
-    background-color: rgb(24, 24, 24);
-    font-family: 'GimpoGothicBold00';
-    outline: none;
-    transition: .3s;
-    border: none;
-    font-size: 2.0rem;
+    justify-content: space-between;
+    padding: 0 1rem;
+    font-size: 1.2rem;
+    font-weight: bolder;
     color: white;
-    font-weight: bold;
-    margin-top: 30px;
-    margin-right: 50px;
+    background-color: rgba(0, 0, 0, 0.64);
+}
+.closeWinnerListContainerIcon{
     cursor: pointer;
 }
-
-.modal_final_bottom_btn:hover {
-    color: var(--fontColor);
-}
-
-.modal_final_container {
-    display: none;
-    position: fixed;
-    top: 0;
-    /* bottom: 0; */
-    left: 0;
-    /* right: 0; */
+.winnerListBottom{
     width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.418);
-    backdrop-filter: blur(4px);
-    z-index: 1;
+    height: calc(100% - 50px);
+    color: white;
+    overflow-y: auto;
 }
-
-.modal_final_body {
-    background-color: white;
-    margin: 8% auto;
-    /* margin-left: 500px; */
-    border-radius: 4px;
-    width: 1000px;
-    padding: 1rem;
+.winnerLineDiv{
     display: flex;
-    flex-direction: column;
-    justify-content: center;
-}
-
-.modal_final_top {
-    width: 100%;
-    height: 100px;
-    border-bottom: 1px solid black;
-    font-size: 2.5rem;
-    /* background-color: white; */
-    color: black;
-    /* margin-left: 20px; */
-    font-weight: bold;
-    display: flex;
-    justify-content: center;
     align-items: center;
-}
-
-.modal_final_middle {
-    /* background-color: white; */
     width: 100%;
-    height: 300px;
-    font-size: 1.3rem;
-    display: flex;
-    flex-wrap: wrap;
-    border-bottom: 1px solid black;
-    /*  background-color: blue;
-      */
-
-
-    /* padding-top: 20px; */
-    /* line-height: 80px; */
+    height: 30px;
+    font-size: 1rem;
+}
+.winnerLineDiv span{
+    margin-left: 0.5rem;
+}
+.winnerLineDiv span:first-child{
+    display: inline-block;
+    width: 150px;
+    font-weight: bolder;
+}
+.winnerListBottom::-webkit-scrollbar{
+    width: 10px;
+}
+.winnerListBottom::-webkit-scrollbar-track{
+    background-color: rgb(94, 94, 94);
+}
+.winnerListBottom::-webkit-scrollbar-thumb{
+    background-color: rgba(31, 31, 31, 0.47);
 }
 
-.winnerSpan {
-    margin: 0.5rem;
-}
-
-/* .modal_fianl_middle_modal{
-	display: flex;
-	 flex-direction:row; 
-} */
-
-.modal_final_bottom {
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    height: 100px;
-    width: 100%;
-    /* font-size: 2.0rem; */
-
-
-}
-
-/* .modal_final_middle>span:nth-child(n){
-    margin-left: 25px;
-    background-color: white;
-    color: black;
-} */
-
-#limitedBtns {
-    display: none;
-}
-
-.deadlineSpan {
-    color: var(--fontColor);
-}
-
-@media screen and (min-width: 1px) and (max-width: 1023px){
-    /*메인 이미지*/
-    .section1 > h1 {
-        font-size: 1rem;
+@media screen and (min-width: 1px) and (max-width: 767px) {
+    .oneDrawDiv {
+        height: 900px;
     }
-    .section1_img > img {
-       width: 90%;
+
+    .drawCenterDiv {
+        height: 800px;
+        flex-direction: column;
+    }
+
+    .drawImgDiv, .drawBottomDiv {
+        width: 100%;
+        height: 400px;
+    }
+
+    .drawImgDiv img {
+        width: 250px;
+        height: 250px;
+    }
+
+    .drawBottomDiv {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+
+    .drawBottomDiv li span {
+        display: inline-block;
+        width: 100%;
+    }
+
+    .drawBottomDiv li span:nth-child(2) {
+        font-size: 0.7rem;
     }
 }
 
 @media screen and (min-width: 767px) and (max-width: 1023px) {
-    /*메인 이미지*/
-    .section1 > h1 {
-        font-size: 1.5rem;
+    .oneDrawDiv {
+        height: 900px;
     }
-    .section1_img > img {
-       width: 70%;
+
+    .drawCenterDiv {
+        height: 800px;
+        flex-direction: column;
     }
+
+    .drawImgDiv, .drawBottomDiv {
+        width: 100%;
+        height: 400px;
+    }
+
+    .drawBottomDiv {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+
 }
